--- a/poupon-web/src/App.css
+++ b/poupon-web/src/App.css
@@ -18,6 +18,18 @@
   font-size: large;
 }
 
+.react-layout-components--box {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+}
+
+.Container {
+    padding:1em;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
