--- a/poupon-web/src/App.css
+++ b/poupon-web/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
 }
 
 .App-logo {
@@ -11,23 +10,19 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
 }
 
 .App-intro {
   font-size: large;
 }
 
-.react-layout-components--box {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-}
-
 .Container {
     padding:1em;
+}
+
+.card-text, .card-title {
+    text-align: left;
+    color: black;
 }
 
 @keyframes App-logo-spin {
