--- a/poupon-web/src/App.css
+++ b/poupon-web/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-intro {
-  font-size: large;
+    font-size: large;
 }
 
 .Container {
@@ -15,6 +15,10 @@ div[class^="col-"], div[class*=" col-"] {
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
