--- a/poupon-web/src/index.css
+++ b/poupon-web/src/index.css
@@ -5,3 +5,10 @@
 .highlight {
 	background: yellow !important;
 }
+
+.topper {
+	width: 100%;
+	height: 16em;
+	background-size: cover;
+	background-position: center;
+}
